# diff-generator

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: cli.py  diff.py  diff_generator.py  generate_diff.py  parser.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: cli.py  gendiff.py  gendiff_script.py
tests/: test_generate_diff.py
tests/fixtures/: expected_json.json
