[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Compares two configuration files and shows a difference"
authors = ["MaxKtv <maximkutiaev@outlook.com>"]
readme = "README.md"
repository = "https://github.com/MaxKtv/python-project-50.git"
packages = [
  { include = "gendiff" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flake8",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities"
]


[tool.poetry.dependencies]
python = ">=3.8.1"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
